# r-vlr-util

./: .gitattributes  .gitignore  CXX_COMPATIBILITY.md  Cargo.toml  MIGRATION.md  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
docs/: PORTING.md
examples/: split_path.rs
include/r-vlr-util/: r-vlr-util.h
include/vlr-util/: compat.hpp
src/: cache.rs  conversion.rs  data.rs  display.rs  ffi.rs  filesystem.rs  lib.rs  logging.rs  network.rs  numeric.rs  options.rs  retry.rs  scope.rs  shared_registry.rs  strings.rs  text.rs  threading.rs
src/windows/: com.rs  console_capture.rs  dynamic_library.rs  error.rs  filesystem.rs  filetime.rs  guid.rs  handle.rs  mod.rs  registry.rs  runtime.rs  security.rs  security_descriptor.rs  services.rs  string_conversion.rs
tests/: cpp_consumer.cpp  strings.rs
