[package]
name = "r-vlr-util"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "General-purpose Rust utilities inspired by vlr-util"
readme = "README.md"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
regex = "1.11"

[target.'cfg(windows)'.dependencies]
gag = "1.0"
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Globalization",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Win32_System_Registry",
  "Win32_System_Services",
  "Win32_System_SystemServices",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_UI_Shell",
] }

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
